# cargo-manifest-proc-macros-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust_validation.yml
benches/: fixed_single_threaded_random_lookups.rs  multi_threaded_random_lookups.rs  single_item_lookup.rs  single_threaded_random_lookups.rs
docs/: useful_commands.md
src/: cargo_manifest.rs  lib.rs  shared_testing_benchmarking.rs  syn_utils.rs  toml_strip.rs
tests/: README.md  workspace_deps.rs
tests/test_data/: a_big_cargo.toml  a_big_cargo_stripped.toml
tests/workspace_deps/: Cargo.toml
tests/workspace_deps/dependency-crate-real-name-a/: Cargo.toml
tests/workspace_deps/dependency-crate-real-name-a-macros/: Cargo.toml
tests/workspace_deps/dependency-crate-real-name-a-macros/src/: lib.rs
tests/workspace_deps/dependency-crate-real-name-a/src/: lib.rs
tests/workspace_deps/dependency-crate-real-name-b/: Cargo.toml
tests/workspace_deps/dependency-crate-real-name-b-macros/: Cargo.toml
tests/workspace_deps/dependency-crate-real-name-b-macros/src/: lib.rs
tests/workspace_deps/dependency-crate-real-name-b/src/: lib.rs
tests/workspace_deps/my-cool-dep/: Cargo.toml
tests/workspace_deps/my-cool-dep-real-name/: Cargo.toml
tests/workspace_deps/my-cool-dep-real-name-macros/: Cargo.toml
tests/workspace_deps/my-cool-dep-real-name-macros/src/: lib.rs
tests/workspace_deps/my-cool-dep-real-name/src/: lib.rs
tests/workspace_deps/my-cool-dep/src/: lib.rs
tests/workspace_deps/src/: lib.rs
tests/workspace_deps/test-crate/: Cargo.toml
tests/workspace_deps/test-crate-real-name-dep/: Cargo.toml
tests/workspace_deps/test-crate-real-name-dep/src/: lib.rs
tests/workspace_deps/test-crate-renamed-dep/: Cargo.toml
tests/workspace_deps/test-crate-renamed-dep/src/: lib.rs
tools/: ci.sh
(+4 files in other folders)
