[package]
name = "test-workspace-root-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
dependency-crate-renamed-a = { workspace = true }
dependency-crate-renamed-b = { workspace = true }

[workspace]
members = [
  "dependency-crate-real-name-a",
  "dependency-crate-real-name-a-macros",
  "dependency-crate-real-name-b",
  "dependency-crate-real-name-b-macros",
  "../workspace_deps_package_hint/dependency-crate-real-name-c",
  "../workspace_deps_package_hint/dependency-crate-real-name-c-macros",
  "test-crate-real-name-dep",
  "test-crate-renamed-dep",
]
resolver = "2"

[workspace.dependencies]
dependency-crate-renamed-a = { package = "dependency-crate-real-name-a", path = "dependency-crate-real-name-a" }
dependency-crate-renamed-b = { package = "dependency-crate-real-name-b", path = "dependency-crate-real-name-b" }
cargo-manifest-proc-macros = { path = "../.." }
